; ModuleID = '/home/carl/AnghaBench/git/extr_gettext.c_init_gettext_charset.c'
source_filename = "/home/carl/AnghaBench/git/extr_gettext.c_init_gettext_charset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LC_CTYPE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@charset = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [5 x i8] c"%.*s\00", align 1
@.str.2 = private unnamed_addr constant [14 x i8] c"David_K\E5gedal\00", align 1
@.str.3 = private unnamed_addr constant [2 x i8] c"C\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @init_gettext_charset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_gettext_charset(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i32, i32* @LC_CTYPE, align 4
  %4 = call i32 @setlocale(i32 %3, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0))
  %5 = call i32 (...) @locale_charset()
  store i32 %5, i32* @charset, align 4
  %6 = load i8*, i8** %2, align 8
  %7 = load i32, i32* @charset, align 4
  %8 = call i32 @bind_textdomain_codeset(i8* %6, i32 %7)
  %9 = call i64 @test_vsnprintf(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i32 13, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.2, i64 0, i64 0))
  %10 = icmp slt i64 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %1
  %12 = load i32, i32* @LC_CTYPE, align 4
  %13 = call i32 @setlocale(i32 %12, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0))
  br label %14

14:                                               ; preds = %11, %1
  ret void
}

declare dso_local i32 @setlocale(i32, i8*) #1

declare dso_local i32 @locale_charset(...) #1

declare dso_local i32 @bind_textdomain_codeset(i8*, i32) #1

declare dso_local i64 @test_vsnprintf(i8*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
